--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-
+/* Styles for the rectangle container */
 .rectangle-div {
     position: relative;
     border: 2px solid #000;
@@ -7,26 +7,34 @@
     height: 250px;
 }
 
-.the-beagle-blog1 {
-    text-decoration: underline;
-}
+/* Styles for the title of the blog */
 .the-beagle-blog {
     margin: 0;
 }
+
+/* Styles for creating a blank line */
 .blank-line2 {
     font-size: 32px;
 }
+
+/* Styles for common text styles */
 .the {
     font-family: var(--font-inter);
 }
+
+/* Styles for the 'Beagle' breed name */
 .beagle {
     font-weight: 700;
     font-family: var(--font-inter);
 }
+
+/* Styles for the description of the Beagle breed */
 .the-beagle-is-a-breed-of-small {
     margin: 0;
     font-size: 20px;
 }
+
+/* Styles for the container of the blog content */
 .the-beagle-blog-container {
     position: relative;
     color: #000;
@@ -38,21 +46,29 @@
     font-family: var(--font-inter);
 }
 
-
+/* Styles for underlined trivia title */
 .trivia1 {
     text-decoration: underline;
 }
+
+/* Styles for trivia section */
 .trivia {
     margin: 0;
 }
+
+/* Styles for each trivia item */
 .height-1316-in-3341-cm {
     margin-bottom: 20px;
 }
+
+/* Styles for the trivia list */
 .height-1316-in-3341-cm-w {
     margin: 0;
     font-size: 20px;
     padding-left: 53px;
 }
+
+/* Styles for the container of the trivia section */
 .trivia-height-container {
     position: relative;
     color: #000;
@@ -63,12 +79,10 @@
     font-family: var(--font-inter);
 }
 
-
-
+/* Styles for the 'Images' section title */
 .images {
     position: relative;
     font-size: 30px;
-    text-decoration: underline;
     display: inline-block;
     font-family: var(--font-inter);
     color: #000;
@@ -76,6 +90,7 @@
     width: 100%;
 }
 
+/* Styles for the Beagle image */
 .dog-1-icon {
     position: relative;
     width: 40%;
@@ -83,12 +98,11 @@
     object-fit: cover;
 }
 
+/* Styles for the 'More Images' link */
 .more-images {
     position: relative;
     font-size: 30px;
-    text-decoration: underline;
     font-family: var(--font-inter);
     color: #000;
     text-align: left;
 }
-
